park_viewer - Added border on each div and styled button and title.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,28 @@
 </head>
 
 <body>
-    <div id="main">
-        <div id="map"></div>
-    </div>
+    <!--<div id="main">-->
+        <div id="map_border">
+            <p id="map_title"></p>
+            <div id="map_button">
+                <a href="javascript:void(0)" id="openbtn" onclick="openNav()">&#187;</a>
+            </div>
+            <div id="map">
+
+            </div>
+        </div>
+
+        <div id="panel_border">
+            <p id="panel_title">Morse Mountain</p>
+            <div id="panel_button">
+                <a href="javascript:void(0)" id="closebtn" onclick="closeNav()">&#171;</a>
+            </div>
+            <div id="panel">
+
+                <!--add form elements for whatevs-->
+            </div>
+        </div>
+    <!--</div>-->
 
 
     <!--put your external script links here-->
