park_viewer - Added automatic form sizing.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,27 @@
                 <a href="javascript:void(0)" id="closebtn" onclick="closeNav()">&#171;</a>
             </div>
             <div id="panel">
+                <div id="form">
+                    <form>
+                        <label>Viewer Layers:</label>
+                        <br>
+                        <input type="checkbox" name="layer" value="layer_1" id="layer_one">
+                        <label for="layer_one">Layer_1</label>
+                        <br>
+                        <input type="checkbox" name="layer" value="layer_1" id="layer_two">
+                        <label for="layer_two">Layer_1</label>
+                        <br>
+                        <input type="checkbox" name="layer" value="layer_1" id="layer_three">
+                        <label for="layer_three">Layer_1</label>
+                        <br>
+                        <input type="checkbox" name="layer" value="layer_1" id="layer_four">
+                        <label for="layer_four">Layer_1</label>
+                        <br>
+                        <input type="checkbox" name="layer" value="layer_1" id="layer_five">
+                        <label for="layer_five">Layer_1</label>
+                        <br>
+                    </form>
+                </div>
 
                 <!--add form elements for whatevs-->
             </div>
@@ -51,6 +72,7 @@
     <script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
     <script type="text/javascript" src="lib/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 
+    <script type="text/javascript" src="js/styling.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
 </body>
