--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
                     <form>
                         <label>Viewer Layers:</label>
                         <br>
-                        <input type="checkbox" name="layer" value="layer_1" id="layer_one">
-                        <label for="layer_one">Layer_1</label>
+                        <input type="checkbox" id="parcels_layer">
+                        <label for="parcels_layer"> - Parcels</label>
                         <br>
-                        <input type="checkbox" name="layer" value="layer_1" id="layer_two">
-                        <label for="layer_two">Layer_1</label>
+                        <input type="checkbox" id="trs_layer">
+                        <label for="trs_layer"> - Sec. Town. Range</label>
                         <br>
-                        <input type="checkbox" name="layer" value="layer_1" id="layer_three">
-                        <label for="layer_three">Layer_1</label>
+                        <input type="checkbox" id="park_points">
+                        <label for="park_points"> - Park Points</label>
                         <br>
-                        <input type="checkbox" name="layer" value="layer_1" id="layer_four">
-                        <label for="layer_four">Layer_1</label>
+                        <input type="checkbox" id="land_type_layer">
+                        <label for="land_type_layer"> - Land Type</label>
                         <br>
-                        <input type="checkbox" name="layer" value="layer_1" id="layer_five">
-                        <label for="layer_five">Layer_1</label>
+                        <input type="checkbox" id="address_layer">
+                        <label for="address_layer"> - Address Points</label>
                         <br>
                     </form>
                 </div>
@@ -75,5 +75,6 @@
     <script type="text/javascript" src="js/styling.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
+    <script type="text/javascript" src="js/form.js"></script>
 </body>
 </html>
