park_viewer - implemented layer loading and removing based on checkbox status.

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
                     <form>
                         <label>Viewer Layers:</label>
                         <br>
-                        <input type="checkbox" id="parcels_layer">
-                        <label for="parcels_layer"> - Parcels</label>
+                        <input type="checkbox" id="parcels_selection">
+                        <label for="parcels_selection"> - Parcels</label>
                         <br>
-                        <input type="checkbox" id="trs_layer">
-                        <label for="trs_layer"> - Sec. Town. Range</label>
+                        <input type="checkbox" id="towns_and_townships_polygons_maine_metwp24p">
+                        <label for="towns_and_townships_polygons_maine_metwp24p"> - Sec. Town. Range</label>
                         <br>
-                        <input type="checkbox" id="park_points">
-                        <label for="park_points"> - Park Points</label>
+                        <input type="checkbox" id="morse_mountain_pts">
+                        <label for="morse_mountain_pts"> - Park Points</label>
                         <br>
-                        <input type="checkbox" id="land_type_layer">
-                        <label for="land_type_layer"> - Land Type</label>
+                        <input type="checkbox" id="land_type">
+                        <label for="land_type"> - Land Type</label>
                         <br>
-                        <input type="checkbox" id="address_layer">
-                        <label for="address_layer"> - Address Points</label>
+                        <input type="checkbox" id="ne_10m_populated_places_simple">
+                        <label for="ne_10m_populated_places_simple"> - Address Points</label>
                         <br>
                     </form>
                 </div>
@@ -74,7 +74,6 @@
 
     <script type="text/javascript" src="js/styling.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
-    <script type="text/javascript" src="js/form.js"></script>
+
 </body>
 </html>
