--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <!--put your external stylesheet links here-->
     <link rel="stylesheet" href="lib/leaflet/leaflet.css">
     <link rel="stylesheet" href="lib/bootstrap-3.3.7-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="js/leaflet_home/leaflet.zoomhome.css"/>
+
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/buttons.css">
+
     <!--[if IE<9]>
         <link rel="stylesheet" href="css/style.ie.css">
     <![endif]-->
