park_viewer - Updated form to have div's for adding select boxes within form.

--- a/index.html
+++ b/index.html
@@ -51,21 +51,26 @@
                 <div id="form">
                     <form>
                         <p>View Layers:</p>
-                        <input type="checkbox" id="parcels">
-                        <label for="parcels"> - Parcels</label>
-                        <br>
-                        <input type="checkbox" id="trs">
-                        <label for="trs"> - Sec. Town. Range</label>
-                        <br>
-                        <input type="checkbox" id="morse_mountain_pts">
-                        <label for="morse_mountain_pts"> - Park Points</label>
-                        <br>
-                        <input type="checkbox" id="land_type">
-                        <label for="land_type"> - Land Type</label>
-                        <br>
-                        <input type="checkbox" id="addresses">
-                        <label for="addresses"> - Address Points</label>
-                        <br>
+                        <div id="parcels_div">
+                            <input type="checkbox" id="parcels">
+                            <label for="parcels"> - Parcels</label>
+                        </div>
+                        <div id="trs_div">
+                            <input type="checkbox" id="trs">
+                            <label for="trs"> - Sec. Town. Range</label>
+                        </div>
+                        <div id="morse_mountain_pts_div">
+                            <input type="checkbox" id="morse_mountain_pts">
+                            <label for="morse_mountain_pts"> - Park Points</label>
+                        </div>
+                        <div id="land_type_div">
+                            <input type="checkbox" id="land_type">
+                            <label for="land_type"> - Land Type</label>
+                        </div>
+                        <div id="addresses_div">
+                            <input type="checkbox" id="addresses">
+                            <label for="addresses"> - Address Points</label>
+                        </div>
                     </form>
                 </div>
 
