park_viewer - Added label tags and styling for user points.

--- a/index.html
+++ b/index.html
@@ -69,19 +69,25 @@
                         <div id="addresses_div"></div>
                     </form>
                     <br><br>
-                    <p>Help us identify trees.</p>
-                    <p>Add a new point:</p>
-                    Tree Species:   <select id="species">
-                                        <option value="" disabled selected style="display: none;">Choose Type</option>
-                                        <option value="Ash">Ash</option>
-                                        <option value="Aspen">Aspen</option>
-                                        <option value="Beech">Beech</option>
-                                        <option value="Birch">Birch</option>
-                                        <option value="Maple">Maple</option>
-                                        <option value="Oak">Oak</option>
-                                    </select>
-                    <br><br>
-                    Add point: <a href="#" id="add_tree">Choose on map</a>
+                    <form>
+                        <label style="font-size: 20px">Help us identify trees.</label>
+                        <br>
+                        <label style="font-size: 20px">Add a new point:</label>
+                        <br>
+                        <label for="species">Tree Species:</label>
+                        <select id="species">
+                            <option value="" disabled selected style="display: none;">Choose Type</option>
+                            <option value="Ash">Ash</option>
+                            <option value="Aspen">Aspen</option>
+                            <option value="Beech">Beech</option>
+                            <option value="Birch">Birch</option>
+                            <option value="Maple">Maple</option>
+                            <option value="Oak">Oak</option>
+                        </select>
+                        <br><br>
+                        <label for="add_tree">Add point:</label>
+                        <a href="#" id="add_tree">Choose on map</a>
+                    </form>
                 </div>
             </div>
         </div>
