park_viewer - final product with all features working.

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                         <label for="parcels"> - Parcels</label>
                         <div id="parcels_div"></div>
                         <input type="checkbox" id="trs">
-                        <label for="trs"> - Sec. Town. Range</label>
+                        <label for="trs"> - Land Type</label>
                         <div id="trs_div"></div>
                         <input type="checkbox" id="morse_mountain_pts">
                         <label for="morse_mountain_pts"> - Park Points</label>
                         <div id="morse_mountain_pts_div"></div>
                         <input type="checkbox" id="land_type">
-                        <label for="land_type"> - Land Type</label>
+                        <label for="land_type"> - Land Classification</label>
                         <div id="land_type_div"></div>
                         <input type="checkbox" id="addresses">
                         <label for="addresses"> - Address Points</label>
